[package]
name = "accel-stepper"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
description = "A library for controlling stepper motors."
repository = "https://gitlab.com/Michael-F-Bryan/accel-stepper"
readme = "README.md"
keywords = ["stepper", "stepper-motor", "motor", "AccelStepper"]
categories = ["embedded", "hardware-support", "no-std"]
license = "GPLv2"

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.1.4"
embedded-hal = { version = "0.2.3", optional = true }
void = "1.0.2"
arrayvec = "0.4.11"

[features]
default = []
std = []
hal = ["embedded-hal"]

[dev-dependencies]
AccelStepper-sys = { path = "vendor/AccelStepper-sys" }
quickcheck = "0.8.5"
quickcheck_macros = "0.8.0"
rand = "0.6.5"
lazy_static = "1.3.0"
